--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 environs = "^11.0.0"
+requests = "^2.32.3"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
